<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <DUT Name="ST_UI_Command" Id="{beff421a-f386-4f74-9dc6-3c990e9209a8}">
    <Declaration><![CDATA[TYPE ST_UI_Command :
STRUCT
  Seq : DINT;
  CmdType : INT;       // 1=Enable, 2=Disable, 3=Stop, 4=SetResistance, 5=SetForce, 6=Reset, 7=Retract
  AxisMask : BYTE;  // 1=Left, 2=Right, 3=Both
  Param1 : REAL;
  Param2 : REAL;
  AckSeq : DINT;
  Status : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>
