<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <DUT Name="ST_UI_Telemetry" Id="{27039fd2-4e19-4e7f-9615-332cbe409b37}">
    <Declaration><![CDATA[TYPE ST_UI_Telemetry :
STRUCT
  Connected : BOOL;
  LeftPos : REAL;
  RightPos : REAL;
  LeftVel : REAL;
  RightVel : REAL;
  LeftForce : REAL;
  RightForce : REAL;
  PdoActive : BOOL;
  ControlWordActive : BOOL;
  OpModeSet : BOOL;
  TorqueUpdated : BOOL;
  AckSeq : DINT;
  CmdStatus : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>
